infrastructure/gateway/overlays/management-prd/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: main-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  addresses:
    - type: IPAddress
      value: "10.0.2.50"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-longhorn
      port: 443
      protocol: HTTPS
      hostname: "longhorn.mgmt.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "longhorn-system"
    - name: https-harbor
      port: 443
      protocol: HTTPS
      hostname: "harbor.mgmt.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: harbor-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "harbor"
    - name: https-vault
      port: 443
      protocol: HTTPS
      hostname: "vault.mgmt.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "vault"
